# AIM-Assigment-3-

./: .env.example  .env.vercel  .gitignore  .vercelignore  API_DOCUMENTATION.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  ENVIRONMENT_SETUP.md  MERGE.md  README.md  USER_GUIDE.md  VERCEL_DEPLOYMENT.md  VERCEL_SIMPLE_DEPLOYMENT.md  package.json  pyproject.toml  requirements.txt  start.sh  vercel.json
api/: index.py
backend/aimakerspace/: text_utils.py  vectordatabase.py
backend/aimakerspace/openai_utils/: chatmodel.py
backend/app/: main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/core/: config.py  performance.py
backend/app/middleware/: caching.py  error_handler.py  error_tracking.py  monitoring.py  rate_limiter.py  request_validator.py
backend/app/models/: chat.py  upload.py
backend/app/services/: __init__.py  chat_service.py  chat_service_stateless.py  pdf_service.py  pdf_service_stateless.py  pdf_service_vercel.py
backend/tests/: test_chat.py  test_health.py  test_rag_integration.py  test_upload.py
frontend/: .env.production  deploy.sh  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/frontend/: index.html
frontend/frontend/assets/: ChatPage-DH1B66CM.js  HomePage-CK_AFdlf.js  api-lYTg9YvB.js  index-BP6QgS4F.css  index-CvtPTGeu.js  react-vendor-79u6xiU-.js
frontend/scripts/: fix-paths.js
frontend/src/: App.tsx
frontend/src/components/: ApiKeyModal.tsx  ChatInterface.tsx  Layout.tsx  MessageList.tsx  PDFUpload.tsx  SourcesList.tsx
scripts/: dev.sh  fix-default-branch.sh
(+19 files in other folders)
